# signout

./: .gitignore  ACKNOWLEDGEMENTS  AUTHORS  LICENSE  MANIFEST.in  README.md  __init__.py  __main__.py  app.py  auth.py  backupdb.sh  db.py  dbdump.sql  dbsettings.json  dbsettings.json.test  dbsettings.json.tmpl  dummy_data_maker.py  helpers.py  notifier.py  requirements.dev.txt  requirements.txt  setup.cfg  setup.py  signout.old.sql  signout.py  signout.sql  signout.update.sql  signout.wsgi  signout.wsgi.tmpl  stresstest.sh  todo_items.md  tox.ini  views.py
docs/: db_upgrade_steps.txt  signout-ssl.mskcc.me.conf  signout.mskcc.me.conf
notifier/: notifier.py
notifier/data/: nf_assignments.sql  nightfloat.csv  nightfloat.xlsx  nightfloat2.csv  phone_numbers.csv  phone_numbers.xlsx
scripts/: backupdb.sh  common.sh  cron_notify.sh  dummy_data_maker.py  fix_service_active.sql  format-htmldjango.sh  nf_assignments.sql  pre-commit  restoredb.sh  signout.sql  stresstest.sh  test_db_update.sql  updatedb.sh
src/signout/: __init__.py  __main__.py  app.py  auth.py  cli.py  db.py  helpers.py  notifier.py  views.py
src/signout/scripts/: backupdb.sh  common.sh  cron_notify.sh  dummy_data_maker.py  fix_service_active.sql  format-htmldjango.sh  pre-commit  restoredb.sh  signout.sql  stresstest.sh  updatedb.sh
src/signout/static/: .eslintrc.js  AUTHORS-jquery.txt  jquery-ui.css  jquery-ui.min.js  signout.css  signout.js
src/signout/templates/: base.html  nightfloat.html  submission.html
static/: .eslintrc.js  signout.css  signout.js  sorttable.js
templates/: addservice.html  admin.html  base.html  login.html  nightfloat.html  query.html  received.html  removed.html  service.html  servicelist.html  submission.html  submission_weekend.html
updates/: signout.update.sql
