[metadata]
name = Signout
license = MIT
author = David M. Rosenberg
author_email = dmr@davidrosenberg.me
description = MSKCC Signout Program
long_description = file: README.md
long_description_content_type = text/x-markdown
version = attr: signout.__version__
classifiers =
    Development Status :: 5 - Production/Stable

[options]
prefix = 
zip_safe = False
packages = find:
package_dir = src
# scripts =
#   src/signout/scripts/backupdb.sh
#   src/signout/scripts/common.sh
#   src/signout/scripts/cron_notify.sh
#   src/signout/scripts/restoredb.sh
#   src/signout/scripts/updatedb.sh
include_package_data = true
python_requires = >= 3.6

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    signout = signout.cli:main



