#
# -*- coding: utf-8 -*-
# vim:enc=utf-8
#
#    This file is part of signout.py the house staff web-based signout
#    manager for MSKCC.
#    Copyright © 2020-2021 David M. Rosenberg <dmr@davidrosenberg.me>
#
#    This program is free software: you can redistribute it and/or modify
#    it under the terms of the GNU General Public License as published by
#    the Free Software Foundation, either version 3 of the License, or
#    (at your option) any later version.
#
#    This program is distributed in the hope that it will be useful,
#    but WITHOUT ANY WARRANTY; without even the implied warranty of
#    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
#    GNU General Public License for more details.
#
#    You should have received a copy of the GNU General Public License
#    along with this program.  If not, see <https://www.gnu.org/licenses/>.
#

[metadata]
name = Signout
license = MIT
author = David M. Rosenberg
author_email = dmr@davidrosenberg.me
description = MSKCC Signout Program
long_description = file: README.md
long_description_content_type = text/x-markdown
version = attr: signout.__version__
classifiers =
    Development Status :: 5 - Production/Stable

[install]
# prefix = /usr/local

[options]
zip_safe = False
packages = find:
package_dir = src
# scripts =
#   src/signout/scripts/backupdb.sh
#   src/signout/scripts/common.sh
#   src/signout/scripts/cron_notify.sh
#   src/signout/scripts/restoredb.sh
#   src/signout/scripts/updatedb.sh
include_package_data = true
python_requires = >= 3.6

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    signout = signout.cli:main



